src/theme/BlogPostItem/Header/Author/styles.module.css
.avatar {
  flex-direction: column;
  align-items: center;
}

.imageContainer {
  position: relative;
  display: flex;
  margin-bottom: 0.3rem;
  opacity: 0.8;
}

.imageContainer::before {
  content: '';
  background-color: var(--ifm-color-primary);
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  mix-blend-mode: color;
  border-radius: 100%;
  pointer-events: none;
}

.imageContainer::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background: linear-gradient(
    112.64deg,
    rgba(73, 123, 247, 0) 22.46%,
    var(--ifm-color-primary-light) 81.52%
  );
  border-radius: 100%;
  pointer-events: none;
}

